--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,24 +1,25 @@
 // html/body style
 html,body 
-    padding: 0
-    margin: 0
-    box-sizing: border-box
+  padding: 0
+  margin: 0
+  box-sizing: border-box
 
 html 
-    font-size: 10px
+  font-size: 10px
 
 *.display-none
-    display: none
+  display: none
 
 *.container-center
-    width: 80%
-    margin: auto
+  width: 80%
+  margin: auto
 
 // variables
 $primary-grey: #292929
-$primary-blue: #23e2e9
+$primary-blue: #00AEEF
 $secondary-blue: #3539BF
 $primary-orange: #FF8E3A
+$primary-gold: #FED13A
 $primary-white: #fff
 $primary-off-white: rgba(0,0,0,0.05)
 $bg-blue: #0098ff
@@ -35,89 +36,90 @@ $gutter-horizontal: 6rem
 // extends/inheritance
 
 .group
-    width: 90%
-    margin: auto
+  width: 90%
+  margin: auto
 
 h3
-    font-size: 10rem
-    font-weight: bold
-    font-family: $primary-font 
-    text-align: center
-    margin-bottom: 5rem
+  font-size: 10rem
+  font-weight: bold
+  font-family: $primary-font 
+  text-align: center
+  margin-bottom: 5rem
 
 .learn-more
-    font-family: $primary-font
-    font-size: 2rem
-    text-decoration: underline
+  font-family: $primary-font
+  font-size: 2rem
+  text-decoration: underline
+  color: #000
+
+  &:hover
     color: #000
 
-    &:hover
-        color: #000
-
 %background-image
-    background-size: cover
-    background-position: center
-    filter: grayscale(10%)
-    background-repeat: no-repeat
-    width: 100%
-    height: 100%
-    position: absolute
-    top: 0
-    left: 0
-    z-index: -10
+  background-size: cover
+  background-position: center
+  filter: grayscale(10%)
+  background-repeat: no-repeat
+  width: 100%
+  height: 100%
+  position: absolute
+  top: 0
+  left: 0
+  z-index: -10
 
 %center-img
-    position: absolute
-    top: 50%
-    left: 50%
-    transform: translate(-50%, -50%)
+  position: absolute
+  top: 50%
+  left: 50%
+  transform: translate(-50%, -50%)
 // clearing floats
 @mixin clearfix
-    &:after
-        content: ""
-        display: table
-        clear: both
+  &:after
+    content: ""
+    display: table
+    clear: both
 
 @mixin design-button
-    .start-design 
-        display: block
-        border-radius: .3rem
-        background-color: #FF8E3A
-        border: none
-        color: #fff
-        font-size: 1.8rem
-        padding: .3rem
-        width: 14rem
-        height: 4.5rem
-        transition: all .5s
-        cursor: pointer
-        margin: auto
-        font-family: $primary-font
+  .start-design 
+    display: block
+    border-radius: .3rem
+    // background-color: $primary-gold
+    background-image: linear-gradient(140deg, $primary-gold, #FEA83A 70%, #FEA83A)
+    border: none
+    color: #fff
+    font-size: 1.8rem
+    padding: .3rem
+    width: 14rem
+    height: 4.5rem
+    transition: all .5s
+    cursor: pointer
+    margin: auto
+    font-family: $primary-font
     
 
-    .start-design span 
-            cursor: pointer
-            display: inline-block
-            position: relative
-            transition: 0.5s
+  .start-design span 
+    cursor: pointer
+    display: inline-block
+    position: relative
+    transition: 0.5s
         
 
-    .start-design span:after 
-            content: '\00bb'
-            position: absolute
-            opacity: 0
-            top: 0
-            right: -1rem
-            transition: 0.5s
-        
+  .start-design span:after 
+    content: '\00bb'
+    position: absolute
+    opacity: 0
+    top: 0
+    right: -1rem
+    transition: 0.5s
+      
 
-    .start-design:hover span 
-            padding-right: 1.3rem
-        
+  .start-design:hover span 
+    padding-right: 1.3rem
+      
 
-    .start-design:hover span:after 
-            opacity: 1
-            right: 0
+  .start-design:hover span:after 
+    opacity: 1
+    right: 0
         
 // import files
 @import _grid
@@ -136,7 +138,7 @@ h3
 
 @import _index-testimonial
 
-@import _form
+// @import _form
 
 @import _contact
 
