--- a/assets/sass/_index-we.sass
+++ b/assets/sass/_index-we.sass
@@ -12,6 +12,7 @@
 
     .header
         display: block
+        padding-top: 2rem
 
         &-are
             letter-spacing: 2rem
@@ -20,6 +21,11 @@
         &-we
             letter-spacing: 1.6rem
             padding-left: 0.9rem
+
+    &-title
+        font-size: $regular-size
+        font-family: $primary-font
+        font-weight: bold
     
     &-description
         font-size: $regular-size
