--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -15,11 +15,10 @@ html
   margin: auto
 
 // variables
-$primary-grey: #292929
-$primary-blue: #00AEEF
-$secondary-blue: #3539BF
-$primary-orange: #FF8E3A
-$primary-gold: #FED13A
+$primary-grey: #888989
+$primary-blue: #69e2d3
+$primary-orange: #eaa04b
+$primary-gold: #f3c953
 $primary-white: #fff
 $primary-off-white: rgba(0,0,0,0.05)
 $bg-blue: #0098ff
@@ -83,14 +82,14 @@ h3
   .start-design 
     display: block
     border-radius: .3rem
-    // background-color: $primary-gold
-    background-image: linear-gradient(140deg, $primary-gold, #FEA83A 70%, #FEA83A)
+    background-color: $primary-gold
+    // background-image: linear-gradient(140deg, $primary-gold, #FEA83A 70%, #FEA83A)
     border: none
     color: #fff
-    font-size: 1.8rem
+    font-size: 2rem
     padding: .3rem
-    width: 14rem
-    height: 4.5rem
+    width: 15rem
+    height: 5.5rem
     transition: all .5s
     cursor: pointer
     margin: auto
