--- a/assets/sass/_index-intro.sass
+++ b/assets/sass/_index-intro.sass
@@ -1,18 +1,18 @@
 .main-intro
-    background: $secondary-blue
-    padding: 14vh 0 14vh
+    background-image: url('../images/main-pic.jpg')
+    background-repeat: no-repeat
+    background-size: cover
+    background-attachment: fixed
+    padding: 14vh 0
     
     @include clearfix
 
-    .text-button
+    &-info
         margin: auto
         height: 70.1rem
-        width: 102.5rem
+        width: 80rem
         padding-top: 10rem 
         padding-left: 1rem
-        background-image: url('../images/intro-pic.png')
-        background-size: cover
-        background-repeat: no-repeat
         @media screen and (max-width: 1440px)
             height: 57.2rem
             width: 83.6rem
@@ -27,14 +27,17 @@
             color: $primary-white
             font-family: $primary-font
             text-align: center
+
         h2
-            font-size: 6rem
+            font-size: 8rem
+            // -webkit-text-stroke-width: .2rem
+            // -webkit-text-stroke-color: $primary-blue
             @media screen and (max-width: 1440px)
                 font-size: 5.3rem
             @media screen and (max-width: 1180px)
                 font-size: 4.2rem
         p
-            font-size: 1.8rem
+            font-size: 2.3rem
             @media screen and (max-width: 1440px)
                 font-size: 1.6rem
             @media screen and (max-width: 1180px)
