--- a/assets/sass/_navbar.sass
+++ b/assets/sass/_navbar.sass
@@ -8,6 +8,16 @@ nav
   padding-top: 1rem
   padding-bottom: .5rem
 
+  // &:hover
+  //   background: rgba(255,255,255,0.97)
+  //   border-bottom: solid #19c7cd 4px
+
+  //   & > .nav-main-name h1, .nav-links a
+  //     color: #000!important
+
+  //   & > .tgj-logo
+  //     content: url('assets/svg/tgj_new_logo.svg')
+
   &.scroll-change
     background: rgba(255,255,255,0.97)
     border-bottom: solid #19c7cd 4px
@@ -54,6 +64,8 @@ nav
         text-decoration: none
         list-style: none
         margin: 0 .5rem
+        cursor: pointer
+
 
         a
           text-decoration: none
