--- a/survey/client/src/App.css
+++ b/survey/client/src/App.css
@@ -2,3 +2,158 @@ html, body, #root {
   width: 100%;
   height: 100%;
 }
+
+.survey {
+  position: relative;
+  height: 100%;
+  background-color: #eee;
+}
+
+.question-sec {
+  width: 80%;
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
+  padding-top: 6vh;
+}
+
+.questions-header {
+  font-size: 40px;
+  font-weight: bold;
+  margin-bottom: 40px;
+}
+
+.questions-minor {
+  font-size: 24px;
+}
+
+.inputs {
+  border: none;
+  border-bottom: 1px solid #000;
+  font-size: 18px;
+  width: 300px;
+  border-radius: 5px;
+}
+
+.inputs:focus {
+  outline-width: 0;
+}
+
+.textarea {
+  border: 1px solid #000;
+  border-radius: 5px;
+  font-size: 18px;
+  width: 60%;
+}
+
+.textarea:focus {
+  outline-width: 0;
+}
+
+.buttons {
+  display: inline-block;
+  vertical-align: top;
+  width: 225px;
+  height: 225px;
+  border: 2px solid #000;
+  border-radius: 5px;
+  cursor: pointer;
+  padding: 10px;
+  text-align: center;
+  margin-left: 20px;
+  margin-top: 60px;
+}
+
+.buttons:hover {
+  transform: translateY(-2%);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.8);
+}
+
+.buttons-title {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.buttons-price {
+  font-size: 20px;
+  color: green;
+  font-weight: bold;
+}
+
+.buttons-desc {
+  font-size: 20px;
+
+}
+
+.next-button {
+  border: 2px solid #000;
+  padding: 5px 15px;
+  cursor: pointer;
+  font-size: 22px;
+  width: 48px;
+  margin: 20px auto 0;
+}
+
+.back-button {
+  font-size: 22px;
+  border: 2px solid #000;
+  display: inline-block;
+  padding: 5px 15px;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+.back-button:hover, .next-button:hover {
+  background-color: #000;
+  color: #fff;
+}
+
+.summary-column { 
+  width: 20%;
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 80%;
+  height: 100%;
+  background-color: #ddd;
+  overflow: scroll;
+}
+
+.summary-title {
+  margin: 20px auto;
+  padding-bottom: 10px;
+  text-align: center;
+  font-size: 28px;
+  font-weight: bold;
+  border-bottom: 1px solid #000;
+  width: 80%;
+}
+
+.category-title {
+  font-size: 22px;
+  padding-left: 15px;
+  font-weight: bold;
+  color: blue;
+  cursor: pointer;
+  margin-bottom: 0;
+  text-decoration: underline;
+}
+
+.category-desc {
+  font-size: 18px;
+  padding-left: 40px;
+  margin: 0;
+}
+
+.est-price {
+  position: fixed;
+  bottom: 0;
+  width: 20%;
+  height: 80px;
+  background-color: green;
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  padding-top: 7px;
+  text-align: center;
+}
