--- a/survey/client/src/App.css
+++ b/survey/client/src/App.css
@@ -1,11 +1,11 @@
 html, body, #root {
   width: 100%;
   height: 100%;
-  /*background-image: url('./images/main-pic.jpg');
+  background-image: url('./images/wood-bg.jpg');
   background-position: cover;
   background-repeat: no-repeat;
-  background-attachment: fixed;*/
-  background-color: #eee;
+  background-attachment: fixed;
+  /*background-color: #eee;*/
 }
 
 .survey {
@@ -14,19 +14,27 @@ html, body, #root {
   /*background-color: #eee;*/
 }
 
+.tgj_logo {
+  width: 60px;
+  position: absolute;
+  top: 60px;
+  left: 80px;
+  z-index: 1000;
+}
+
 .question-sec {
-  width: 75%;
+  width: 74.5%;
   display: inline-block;
   text-align: center;
   padding: 80px 0;
-  position: relative;
   background-color: #fff;
   margin: 0 2.5%;
   border-radius: 5px;
   position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 30px;
+  /*transform: translateY(-50%);*/
   box-shadow: 0 0 10px .3px rgba(0, 0, 0, 0.4);
+  border: 2px solid #72cbcd;
 }
 
 .step-7 {
@@ -74,7 +82,7 @@ html, body, #root {
   vertical-align: top;
   width: 350px;
   height: auto;
-  border: 2px solid #000;
+  border: 3px solid #72cbcd;
   border-radius: 5px;
   cursor: pointer;
   padding: 10px;
@@ -119,27 +127,29 @@ html, body, #root {
 }
 
 .next-button {
-  border: 2px solid #000;
+  border: 2px solid #eeca68;
   padding: 5px 15px;
   cursor: pointer;
   font-size: 22px;
   margin-left: 20px;
   border-radius: 5px;
   display: inline-block;
+  color: #eeca68;
 }
 
 .back-button {
   font-size: 22px;
-  border: 2px solid #000;
+  border: 2px solid #eeca68;
   display: inline-block;
   padding: 5px 15px;
   cursor: pointer;
   margin-top: 20px;
   border-radius: 5px;
+  color: #eeca68;
 }
 
 .back-button:hover, .next-button:hover {
-  background-color: #000;
+  background-color: #eeca68;
   color: #fff;
 }
 
@@ -149,13 +159,13 @@ html, body, #root {
   display: inline-block;
   vertical-align: top;
   background-color: #fff;
-  overflow: scroll;
   position: absolute;
   right: 0;
   top: 30px;
   margin: 0 20px;
   border-radius: 5px;
   box-shadow: 0 0 10px .3px rgba(0, 0, 0, 0.4);
+  border: 2px solid #72cbcd;
 }
 
 .summary-title {
@@ -172,7 +182,7 @@ html, body, #root {
   font-size: 22px;
   padding-left: 15px;
   font-weight: bold;
-  color: blue;
+  color: #72cbcd;
   cursor: pointer;
   margin-bottom: 0;
   text-decoration: underline;
@@ -190,11 +200,27 @@ html, body, #root {
   right: 20px;
   width: 20%;
   background-color: green;
-  color: white;
+  color: #fff;
   font-size: 24px;
   font-weight: bold;
   padding: 10px 0;
   text-align: center;
   border-radius: 5px;
   box-shadow: 0 0 10px .3px rgba(0, 0, 0, 0.4);
+}
+
+.end-summary-sec {
+  display: inline-block;
+  width: 25%;
+  vertical-align: top;
+  text-align: left;
+}
+
+.end-summary-sec:nth-child(3),
+.end-summary-sec:nth-child(4) {
+  margin-right: 100px;
+}
+
+.end-summary-title {
+  font-weight: bold;
 }
