--- a/assets/sass/_index-process.sass
+++ b/assets/sass/_index-process.sass
@@ -10,12 +10,17 @@
 
   &-box
     height: 40rem
-    color: $primary-white
     font-family: $primary-font
     text-align: center
+    margin: .5rem
+    border-radius: .5rem
+    box-shadow: inset 0 0 2rem #000
 
     &-1a
       background-color: #5dafa9
+
+      img
+        width: 6.5rem
     
     &-1b
       background-color: #72cbcd
@@ -27,22 +32,37 @@
       position: relative
 
       img
-        width: 70%
+        width: 90%
         @extend %center-img
 
     &-2a
       background-color: #898a8a
 
+      img
+        width: 14rem
+
+      p
+        color: #fff
+
     &-2b
       background-color: #a2a2a2
       padding: 6rem
       font-size: $secondary-size
+      color: #fff
 
     &-2c
       background-color: #c4c6c6
+      position: relative
+
+      img
+        width: 90%
+        @extend %center-img
 
     &-3a
       background-color: #d8b464
+
+      img
+        width: 12rem
 
     &-3b
       background-color: #eeca69
@@ -51,25 +71,31 @@
 
     &-3c
       background-color: #f9d480
+      position: relative
+
+      p
+        border: .5rem solid #fff
+        border-radius: 1rem
+        color: #fff
+        display: inline-block
+        font-size: 8rem
+        padding: 2rem
+        @extend %center-img
 
   &-step
     display: inline-block
 
     &-num
-      width: 6.5rem
-      height: auto
-      vertical-align: top
-      margin-top: 9.5rem
+      // vertical-align: top
+      margin: 6rem 0 4rem
       // text-shadow: .5rem .5rem 1rem #000
 
     &-title
       font-size: 7rem
       line-height: 5rem
-      padding-top: 9.5rem
       font-family: $secondary-font
-      display: inline-block
+      // display: inline-block
       color: #000
-
 
       // text-shadow: .5rem .5rem 1rem #000
 
