--- a/survey/client/src/App.css
+++ b/survey/client/src/App.css
@@ -28,7 +28,7 @@ html, body, #root {
   text-align: center;
   padding: 80px 0;
   background-color: #fff;
-  margin: 0 2.5%;
+  margin: 0 2.5% 30px;
   border-radius: 5px;
   position: absolute;
   top: 30px;
@@ -159,7 +159,7 @@ html, body, #root {
   display: inline-block;
   vertical-align: top;
   background-color: #fff;
-  position: absolute;
+  position: fixed;
   right: 0;
   top: 30px;
   margin: 0 20px;
