--- a/assets/sass/_index-process.sass
+++ b/assets/sass/_index-process.sass
@@ -15,6 +15,16 @@
     margin: .5rem
     border-radius: .5rem
     box-shadow: inset 0 0 2rem #000
+    position: relative
+
+    &-desc
+      width: 90%
+      @extend %center-img
+      font-size: $secondary-size
+
+    &-img
+      width: 90%
+      @extend %center-img
 
     &-1a
       background-color: #5dafa9
@@ -24,16 +34,9 @@
     
     &-1b
       background-color: #72cbcd
-      padding: 8rem
-      font-size: $secondary-size
 
     &-1c
       background-color: #95d6d8
-      position: relative
-
-      img
-        width: 90%
-        @extend %center-img
 
     &-2a
       background-color: #898a8a
@@ -46,17 +49,10 @@
 
     &-2b
       background-color: #a2a2a2
-      padding: 6rem
-      font-size: $secondary-size
       color: #fff
 
     &-2c
       background-color: #c4c6c6
-      position: relative
-
-      img
-        width: 90%
-        @extend %center-img
 
     &-3a
       background-color: #d8b464
@@ -66,17 +62,14 @@
 
     &-3b
       background-color: #eeca69
-      padding: 6rem
-      font-size: $secondary-size
 
     &-3c
       background-color: #f9d480
-      position: relative
 
       p
-        border: .5rem solid #fff
+        border: .5rem solid #000
         border-radius: 1rem
-        color: #fff
+        color: #000
         display: inline-block
         font-size: 8rem
         padding: 2rem
