--- a/survey/client/src/App.css
+++ b/survey/client/src/App.css
@@ -126,15 +126,18 @@ html, body, #root {
 
 }
 
-.next-button {
+.small-button {
   border: 2px solid #eeca68;
   padding: 5px 15px;
   cursor: pointer;
   font-size: 22px;
-  margin-left: 20px;
   border-radius: 5px;
   display: inline-block;
   color: #eeca68;
+}
+
+.next-button {
+  margin-left: 20px;
 }
 
 .back-button {
