--- a/assets/sass/_index-testimonial.sass
+++ b/assets/sass/_index-testimonial.sass
@@ -1,14 +1,14 @@
 .testimonial 
   background-color: rgba(0, 0, 0, 0.05)
-  height: 46rem
+  height: auto
   border-top: .1rem solid (0, 0, 0, 0.2)
-  padding: 3rem 0
+  padding: 6rem 0 8rem
 
   .row
     padding: 0 0 0 7rem
 
   img.d-block
-    width: 30rem!important
+    width: 35rem!important
     margin: 3rem 0 0!important
 
   p
