--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,16 +37,6 @@ h3 {
   margin-bottom: 5rem;
 }
 
-.learn-more {
-  font-family: "Montserrat", sans-serif;
-  font-size: 2rem;
-  text-decoration: underline;
-  color: #000;
-}
-.learn-more:hover {
-  color: #000;
-}
-
 .contact-main, .process-box-3c p, .process-box-img, .process-box-desc {
   position: absolute;
   top: 50%;
@@ -95,8 +85,8 @@ h3 {
   width: calc(3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem);
 }
 
-nav {
-  width: 100%;
+.nav {
+  width: 100vw;
   background: rgba(0, 0, 0, 0);
   transition: 0.3s;
   position: fixed;
@@ -105,47 +95,70 @@ nav {
   padding-top: 1rem;
   padding-bottom: 0.5rem;
 }
-nav.scroll-change {
+@media screen and (max-width: 780px) {
+  .nav {
+    background-color: rgba(255, 255, 255, 0.97);
+    border-bottom: solid #19c7cd 4px;
+  }
+}
+.nav.scroll-change {
   background: rgba(255, 255, 255, 0.97);
   border-bottom: solid #19c7cd 4px;
 }
-nav:after {
+.nav:after {
   content: "";
   display: table;
   clear: both;
 }
-nav div {
-  display: inline-block;
-  width: calc((100% - 5%)/3);
-}
-@media screen and (max-width: 780px) {
-  nav div {
-    display: block;
+@media screen and (min-width: 780px) {
+  .nav div {
     margin: auto;
-    width: 100%;
+    width: calc((100% - 5%)/3);
   }
 }
-nav .nav-main-name .tgj-logo {
+@media screen and (max-width: 780px) {
+  .nav-main-name {
+    display: inline-block;
+    width: 70%;
+    margin-left: 15%;
+  }
+}
+.nav-main-name .tgj-logo {
   width: 4rem;
   transform: translate(0, -0.25rem);
   margin-right: 0.5rem;
 }
-nav .nav-main-name h1 {
+@media screen and (max-width: 780px) {
+  .nav-main-name .tgj-logo {
+    width: 3.5rem;
+  }
+}
+.nav-main-name h1 {
   margin-bottom: 2rem;
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
   display: inline-block;
 }
-nav .nav-main-name a {
+@media screen and (max-width: 780px) {
+  .nav-main-name h1 {
+    font-size: 2rem;
+  }
+}
+.nav-main-name a {
   color: #fff;
 }
-nav .nav-main-name a:hover {
+@media screen and (max-width: 780px) {
+  .nav-main-name a {
+    color: #58595b;
+  }
+}
+.nav-main-name a:hover {
   text-decoration: none;
 }
-nav .nav-main-name span {
+.nav-main-name span {
   color: #69e2d3;
 }
-nav .design-button .start-design {
+.nav .design-button .start-design {
   display: block;
   border-radius: 0.3rem;
   background-color: #f3c953;
@@ -160,13 +173,13 @@ nav .design-button .start-design {
   margin: auto;
   font-family: "Montserrat", sans-serif;
 }
-nav .design-button .start-design span {
+.nav .design-button .start-design span {
   cursor: pointer;
   display: inline-block;
   position: relative;
   transition: 0.5s;
 }
-nav .design-button .start-design span:after {
+.nav .design-button .start-design span:after {
   content: "»";
   position: absolute;
   opacity: 0;
@@ -174,29 +187,44 @@ nav .design-button .start-design span:after {
   right: -1rem;
   transition: 0.5s;
 }
-nav .design-button .start-design:hover span {
+.nav .design-button .start-design:hover span {
   padding-right: 1.3rem;
 }
-nav .design-button .start-design:hover span:after {
+.nav .design-button .start-design:hover span:after {
   opacity: 1;
   right: 0;
 }
-nav .design-button .start-design:focus {
+.nav .design-button .start-design:focus {
   outline: none;
 }
-nav .nav-links ul {
+@media screen and (max-width: 780px) {
+  .nav .design-button {
+    display: none;
+  }
+}
+.nav-links {
+  display: block;
+  margin: auto;
+}
+@media screen and (max-width: 780px) {
+  .nav-links {
+    display: none;
+    padding-top: 1rem;
+  }
+}
+.nav-links ul {
   width: 4rem;
   display: inline;
   padding: 0;
 }
-nav .nav-links ul li {
+.nav-links ul li {
   display: inline-block;
   text-decoration: none;
   list-style: none;
   margin: 0 0.5rem;
   cursor: pointer;
 }
-nav .nav-links ul li a {
+.nav-links ul li a {
   text-decoration: none;
   text-transform: uppercase;
   color: #fff;
@@ -205,16 +233,54 @@ nav .nav-links ul li a {
   font-family: "Montserrat", sans-serif;
   font-weight: 1000;
 }
-nav .nav-links ul .active {
+@media screen and (max-width: 780px) {
+  .nav-links ul li a {
+    color: #000 !important;
+  }
+}
+.nav-links ul .active {
   color: #69e2d3 !important;
+}
+.nav-icon {
+  display: none;
+}
+@media screen and (max-width: 780px) {
+  .nav-icon {
+    display: inline-block;
+  }
+}
+.nav-icon .fa-bars {
+  color: #69e2d3;
+  font-size: 3rem;
+  margin-top: 0.6rem;
+  cursor: pointer;
+}
+.nav .unhidden {
+  display: block;
+  margin: auto;
 }
 
 .main-intro {
   background-image: url("../images/main-pic.jpg");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100%;
   background-attachment: fixed;
-  padding: 14vh 0;
+  padding: 10vw 0;
+  height: 55vw;
+}
+@media screen and (max-width: 780px) {
+  .main-intro {
+    padding-top: 18vw;
+    background-size: 140%;
+    background-position: center top;
+    height: 80vw;
+  }
+}
+@media screen and (max-width: 500px) {
+  .main-intro {
+    background-size: 160%;
+    height: 100vw;
+  }
 }
 .main-intro:after {
   content: "";
@@ -223,23 +289,18 @@ nav .nav-links ul .active {
 }
 .main-intro-info {
   margin: auto;
-  height: 70.1rem;
-  width: 80rem;
-  padding-top: 10rem;
+  width: 100vw;
+  padding-top: 4vw;
   padding-left: 1rem;
 }
-@media screen and (max-width: 1440px) {
+@media screen and (max-width: 780px) {
   .main-intro-info {
-    height: 57.2rem;
-    width: 83.6rem;
-    padding-top: 6.5rem;
+    padding-top: 0;
   }
 }
-@media screen and (max-width: 1180px) {
+@media screen and (max-width: 500px) {
   .main-intro-info {
-    width: 70rem;
-    height: 50rem;
-    padding-top: 7rem;
+    padding-top: 10vw;
   }
 }
 .main-intro-info h2, .main-intro-info p {
@@ -248,29 +309,29 @@ nav .nav-links ul .active {
   text-align: center;
 }
 .main-intro-info h2 {
-  font-size: 8rem;
+  font-size: 5.8vw;
 }
-@media screen and (max-width: 1440px) {
+@media screen and (max-width: 780px) {
   .main-intro-info h2 {
-    font-size: 5.3rem;
+    font-size: 8vw;
   }
 }
-@media screen and (max-width: 1180px) {
+@media screen and (max-width: 500px) {
   .main-intro-info h2 {
-    font-size: 4.2rem;
+    font-size: 9vw;
   }
 }
 .main-intro-info p {
-  font-size: 2.7rem;
+  font-size: 2vw;
 }
-@media screen and (max-width: 1440px) {
+@media screen and (max-width: 780px) {
   .main-intro-info p {
-    font-size: 1.6rem;
+    font-size: 2.8vw;
   }
 }
-@media screen and (max-width: 1180px) {
+@media screen and (max-width: 500px) {
   .main-intro-info p {
-    font-size: 1.3rem;
+    font-size: 3.2vw;
   }
 }
 .main-intro-info .design-button .start-design {
@@ -314,75 +375,201 @@ nav .nav-links ul .active {
 }
 
 .who {
-  padding: 15rem;
+  padding: 15rem 8vw;
+  text-align: center;
 }
-.who:after {
-  content: "";
-  display: table;
-  clear: both;
+@media screen and (max-width: 950px) {
+  .who {
+    padding: 5rem;
+  }
 }
-.who h3 {
-  line-height: 8rem;
-  padding-top: 1rem;
-}
-.who .header {
-  display: block;
-  padding-top: 2rem;
-  font-family: "britannic_boldregular";
+.who-header {
+  display: inline-block;
+  vertical-align: top;
+  width: 40%;
+  padding-top: 6rem;
+  font-family: "Montserrat", sans-serif;
   color: #fff;
+  font-weight: bold;
   text-shadow: 1rem 0.6rem #898a8a;
-  font-size: 13rem;
+  font-size: 8vw;
+  line-height: 8.5vw;
 }
-.who .header-are {
+@media screen and (max-width: 950px) {
+  .who-header {
+    display: block;
+    width: 100%;
+    padding-top: 0;
+    padding-bottom: 5rem;
+    font-size: 11vw;
+    line-height: 10vw;
+    text-shadow: 0.5rem 0.6rem #898a8a;
+  }
+}
+@media screen and (max-width: 500px) {
+  .who-header {
+    font-size: 6rem;
+    line-height: 6rem;
+  }
+}
+.who-header-who {
+  display: block;
+}
+.who-header-are {
+  display: block;
   letter-spacing: 1.5rem;
   padding-left: 0.9rem;
 }
-.who .header-we {
+.who-header-we {
+  display: block;
   letter-spacing: 1rem;
   padding-left: 0.9rem;
 }
-.who-title {
-  font-size: 3rem;
+.who-desc {
+  display: inline-block;
+  width: 40%;
+  text-align: left;
+  font-size: 2.2vw;
   font-family: "Montserrat", sans-serif;
+}
+@media screen and (max-width: 950px) {
+  .who-desc {
+    display: block;
+    width: 90%;
+    margin: auto;
+    font-size: 3vw;
+  }
+}
+@media screen and (max-width: 500px) {
+  .who-desc {
+    font-size: 1.8rem;
+    text-align: center;
+  }
+}
+.who-desc-title {
   font-weight: bold;
 }
-.who-description {
-  font-size: 3rem;
-  font-family: "Montserrat", sans-serif;
+.who-desc-info {
   font-weight: lighter;
+}
+.who .learn-more {
+  font-family: "Montserrat", sans-serif;
+  font-size: 2.2vw;
+  text-decoration: underline;
+  color: #000;
+}
+@media screen and (max-width: 950px) {
+  .who .learn-more {
+    font-size: 3vw;
+  }
+}
+@media screen and (max-width: 500px) {
+  .who .learn-more {
+    font-size: 1.8rem;
+  }
 }
 
 .why {
   padding: 0 5rem 5rem 5rem;
+  margin-bottom: 10rem;
 }
 .why-header {
   display: block;
-  font-size: 5rem;
+  font-size: 3.2vw;
   font-weight: bold;
 }
+@media screen and (max-width: 950px) {
+  .why-header {
+    font-size: 3.8vw;
+  }
+}
+@media screen and (max-width: 500px) {
+  .why-header {
+    font-size: 3rem;
+  }
+}
 .why-section {
-  width: calc(100%/3) !important;
-  margin: 0 !important;
-  height: 80rem;
-  padding: 5rem;
+  width: calc(99%/3);
+  height: auto;
+}
+@media screen and (max-width: 950px) {
+  .why-section {
+    width: 90%;
+    margin: auto;
+  }
 }
 .why-section:not(:nth-child(2)) {
   border: 0.5rem solid #000;
+}
+@media screen and (max-width: 950px) {
+  .why-section:not(:nth-child(2)) {
+    border: 0.3rem solid #000;
+  }
 }
 .why-section:nth-child(2) {
   border-top: 0.5rem solid #000;
   border-bottom: 0.5rem solid #000;
 }
+@media screen and (max-width: 950px) {
+  .why-section:nth-child(2) {
+    border-left: 0.3rem solid #000;
+    border-right: 0.3rem solid #000;
+    border-top: 0;
+    border-bottom: 0;
+  }
+}
+.why-section-img {
+  width: 100%;
+  height: auto;
+}
+@media screen and (max-width: 950px) {
+  .why-section-img {
+    width: 49%;
+    vertical-align: top;
+  }
+}
+@media screen and (max-width: 500px) {
+  .why-section-img {
+    width: 100%;
+  }
+}
+.why-section-info {
+  padding: 3vw;
+}
+@media screen and (max-width: 950px) {
+  .why-section-info {
+    width: 49%;
+    display: inline-block;
+  }
+}
+@media screen and (max-width: 500px) {
+  .why-section-info {
+    width: 100%;
+    display: block;
+  }
+}
 .why h4 {
-  font-size: 4rem;
+  font-size: 3.2vw;
   font-weight: normal;
 }
+@media screen and (max-width: 950px) {
+  .why h4 {
+    font-size: 3.8vw;
+  }
+}
+@media screen and (max-width: 500px) {
+  .why h4 {
+    font-size: 3rem;
+  }
+}
 .why p {
-  font-size: 3rem;
+  font-size: 2vw;
   font-weight: lighter;
 }
-.why img {
-  height: 7rem;
+@media screen and (max-width: 500px) {
+  .why p {
+    font-size: 1.8rem;
+  }
 }
 
 .process .row {
@@ -472,68 +659,126 @@ nav .nav-links ul .active {
 
 .faq {
   padding: 8rem 0;
+  text-align: center;
+}
+.faq-column {
+  width: 45%;
+  display: inline-block;
+  vertical-align: top;
+}
+.faq-column:nth-child(2) {
+  margin-right: 5rem;
+}
+@media screen and (max-width: 1180px) {
+  .faq-column {
+    display: block;
+    width: 80%;
+    margin: auto !important;
+  }
+}
+.faq-card {
+  border-bottom: 0.2rem solid #000;
+  padding-bottom: 1rem;
+  margin-bottom: 2rem;
+}
+@media screen and (max-width: 500px) {
+  .faq-card {
+    margin-bottom: 0.5rem;
+  }
+}
+.faq-card .symbol {
+  margin-right: auto;
+  font-size: 1.8vw;
+}
+@media screen and (max-width: 1180px) {
+  .faq-card .symbol {
+    font-size: 3vw;
+  }
+}
+@media screen and (max-width: 780px) {
+  .faq-card .symbol {
+    font-size: 4vw;
+  }
+}
+@media screen and (max-width: 500px) {
+  .faq-card .symbol {
+    font-size: 1.4rem;
+  }
+}
+.faq-card-question {
+  font-size: 2vw;
+  font-weight: 500;
+  line-height: 6rem;
+  cursor: pointer;
+  width: 96%;
+  display: inline-block;
+}
+@media screen and (max-width: 1180px) {
+  .faq-card-question {
+    font-size: 3vw;
+  }
+}
+@media screen and (max-width: 780px) {
+  .faq-card-question {
+    font-size: 4vw;
+  }
+}
+@media screen and (max-width: 500px) {
+  .faq-card-question {
+    font-size: 1.8rem;
+  }
+}
+.faq-card-answer {
+  font-size: 2.5rem;
+  text-align: justify;
+  width: 80%;
+  margin: auto;
+  max-height: 0;
+  transition: max-height 1s;
+  overflow: hidden;
+}
+@media screen and (max-width: 1180px) {
+  .faq-card-answer {
+    font-size: 2.4vw;
+  }
+}
+@media screen and (max-width: 780px) {
+  .faq-card-answer {
+    font-size: 2.8vw;
+  }
+}
+@media screen and (max-width: 500px) {
+  .faq-card-answer {
+    font-size: 1.4rem;
+  }
+}
+.faq .reveal-answer {
+  max-height: 50rem;
+  transition: max-height 1s;
 }
 .faq img {
   width: 23rem;
   margin: auto;
   display: block;
-  margin-bottom: 5rem;
+  margin-bottom: 3rem;
 }
-.faq .accordion {
-  width: 80%;
-  margin: auto;
-}
-.faq .accordion .row:not(:last-child) {
-  margin-bottom: 4rem !important;
-}
-.faq .accordion .row:last-child {
-  margin-bottom: 8rem !important;
-}
-.faq button {
-  font-size: 3rem;
-  color: #fff;
-  font-weight: 500;
-  text-align: left;
-}
-.faq button .question {
-  display: inline-block;
-  width: 97%;
-  text-align: center;
-}
-.faq .card {
-  border: none !important;
-  border-radius: 0 !important;
-  border-bottom: 0.2rem solid #000 !important;
-}
-.faq .card-body {
-  color: #000 !important;
-  padding: 2rem 4rem 4rem;
-}
-.faq .card-body p {
-  font-size: 2.5rem;
-  text-align: justify;
-}
-.faq .card-header {
-  width: 100% !important;
-  height: 8rem !important;
-  text-decoration: none !important;
-  transition: 0.3s;
-  padding: 0 !important;
-  color: #000;
-  background-color: rgba(0, 0, 0, 0) !important;
+@media screen and (max-width: 500px) {
+  .faq img {
+    width: 18rem;
+  }
 }
 
 .testimonial {
   background-color: rgba(0, 0, 0, 0.05);
-  height: 46rem;
+  height: auto;
   border-top: 0.1rem solid 0, 0, 0, 0.2;
-  padding: 3rem 0;
+  padding: 6rem 0 8rem;
 }
 .testimonial .row {
   padding: 0 0 0 7rem;
 }
 .testimonial img.d-block {
-  width: 30rem !important;
+  width: 35rem !important;
   margin: 3rem 0 0 !important;
 }
 .testimonial p {
@@ -595,8 +840,14 @@ nav .nav-links ul .active {
   background-image: url("../images/wood-bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 85rem;
+  height: 90vh;
   position: relative;
+}
+@media screen and (max-width: 950px) {
+  .contact {
+    height: auto;
+    padding: 10rem 0;
+  }
 }
 .contact-main {
   width: 60%;
@@ -606,6 +857,14 @@ nav .nav-links ul .active {
   border-radius: 0.5rem;
   padding: 5rem 3rem;
 }
+@media screen and (max-width: 950px) {
+  .contact-main {
+    transform: none;
+    position: static;
+    margin: auto;
+    width: 80%;
+  }
+}
 .contact-form {
   width: 40%;
   display: inline-block;
@@ -614,6 +873,18 @@ nav .nav-links ul .active {
   margin-right: 2rem;
   border-right: 0.1rem solid #000;
   padding-right: 4rem;
+}
+@media screen and (max-width: 950px) {
+  .contact-form {
+    border-bottom: 0.1rem solid #000;
+    border-right: 0;
+    display: block;
+    margin: auto;
+    width: 80%;
+    padding-bottom: 5rem;
+    margin-bottom: 5rem;
+    padding-right: 0;
+  }
 }
 .contact-form-title {
   font-size: 2.4rem;
@@ -671,6 +942,11 @@ nav .nav-links ul .active {
   width: 40%;
   vertical-align: top;
   display: inline-block;
+}
+@media screen and (max-width: 950px) {
+  .contact-start {
+    width: 80%;
+  }
 }
 .contact-start h5 {
   font-size: 4rem;
@@ -744,13 +1020,14 @@ nav .nav-links ul .active {
   margin: 0 0 10px;
   padding: 0 !important;
 }
+.footer-link:last-child a {
+  cursor: pointer;
+}
 .footer-link a {
-  color: #bbb;
+  color: #fff;
   text-decoration: underline;
   font-size: 16px;
   font-weight: bold;
-}
-.footer-link a:not(:last-child) {
   cursor: not-allowed;
 }
 
