--- a/assets/sass/_footer.sass
+++ b/assets/sass/_footer.sass
@@ -19,11 +19,14 @@
         margin: 0 0 10px
         padding: 0!important
 
+        &:last-child a
+            cursor: pointer
+
+
     &-link a 
-        color: #bbb
+        color: #fff
         text-decoration: underline
         font-size: 16px
         font-weight: bold
+        cursor: not-allowed
 
-        &:not(:last-child)
-            cursor: not-allowed
