--- a/assets/sass/_index-why.sass
+++ b/assets/sass/_index-why.sass
@@ -1,31 +1,76 @@
 .why
   padding: 0 5rem 5rem 5rem
+  margin-bottom: 10rem
 
   &-header
     display: block
-    font-size: 5rem
+    font-size: 3.2vw
     font-weight: bold
 
+    @media screen and (max-width: 950px)
+      font-size: 3.8vw
+
+    @media screen and (max-width: 500px)
+      font-size: 3rem
+
   &-section
-    width: calc(100%/3)!important
-    margin: 0!important
-    height: 80rem
-    padding: 5rem
+    width: calc(99%/3)
+    height: auto
+
+    @media screen and (max-width: 950px)
+      width: 90%
+      margin: auto
 
     &:not(:nth-child(2))
       border: .5rem solid #000
 
+      @media screen and (max-width: 950px)
+        border: .3rem solid #000
+
     &:nth-child(2)
       border-top: .5rem solid #000
       border-bottom: .5rem solid #000
-        
+
+      @media screen and (max-width: 950px)
+        border-left: .3rem solid #000
+        border-right: .3rem solid #000
+        border-top: 0
+        border-bottom: 0
+
+    &-img 
+      width: 100%
+      height: auto
+
+      @media screen and (max-width: 950px)
+        width: 49%
+        vertical-align: top
+
+      @media screen and (max-width: 500px)
+        width: 100%
+
+    &-info
+      padding: 3vw
+      
+      @media screen and (max-width: 950px)
+        width: 49%
+        display: inline-block
+
+      @media screen and (max-width: 500px)
+        width: 100%
+        display: block
 
   h4
-    font-size: $header-four
+    font-size: 3.2vw
     font-weight: normal
+
+    @media screen and (max-width: 950px)
+      font-size: 3.8vw
+
+    @media screen and (max-width: 500px)
+      font-size: 3rem
   p
-    font-size: $regular-size
+    font-size: 2vw
     font-weight: lighter
-      
-  img
-    height: 7rem
+
+    @media screen and (max-width: 500px)
+      font-size: 1.8rem
