--- a/assets/sass/_navbar.sass
+++ b/assets/sass/_navbar.sass
@@ -1,5 +1,5 @@
-nav
-  width: 100%
+.nav
+  width: 100vw
   background: rgba(0,0,0,0)
   transition: .3s
   position: fixed
@@ -18,27 +18,36 @@ nav
   //   & > .tgj-logo
   //     content: url('assets/svg/tgj_new_logo.svg')
 
+  @media screen and (max-width: 780px)
+    background-color: rgba(255,255,255, 0.97)
+    border-bottom: solid #19c7cd 4px
+
   &.scroll-change
     background: rgba(255,255,255,0.97)
     border-bottom: solid #19c7cd 4px
 
   @include clearfix
 
-  div
-    display: inline-block
-    width: calc((100% - 5%)/3)
-
-  @media screen and (max-width: 780px)
+  @media screen and (min-width: 780px)
     div
-      display: block
       margin: auto
-      width: 100%
+      width: calc((100% - 5%)/3)
 
-  .nav-main-name
+  &-main-name
+
+    @media screen and (max-width: 780px)
+      display: inline-block
+      // margin: auto
+      width: 70%
+      margin-left: 15%
+
     .tgj-logo
       width: 4rem
       transform: translate(0, -.25rem)
       margin-right: .5rem
+
+      @media screen and (max-width: 780px)
+        width: 3.5rem
 
     h1
       margin-bottom: 2rem
@@ -46,8 +55,14 @@ nav
       font-weight: 500
       display: inline-block
 
+      @media screen and (max-width: 780px)
+        font-size: 2rem
+
     a
       color: $primary-white
+
+      @media screen and (max-width: 780px)
+        color: $primary-grey
 
       &:hover
         text-decoration: none
@@ -58,7 +73,18 @@ nav
   .design-button
     @include design-button
 
-  .nav-links
+    @media screen and (max-width: 780px)
+      display: none
+
+  &-links
+    // padding-top: 1rem
+    display: block
+    margin: auto
+
+    @media screen and (max-width: 780px)
+      display: none
+      padding-top: 1rem
+
     ul
       width: 4rem
       display: inline
@@ -81,7 +107,24 @@ nav
           font-family: $primary-font
           font-weight: 1000
 
+          @media screen and (max-width: 780px)
+            color: #000!important
+
       .active 
           color: $primary-blue!important
   
-  
+  &-icon
+    display: none
+
+    @media screen and (max-width: 780px)
+      display: inline-block
+
+    .fa-bars
+      color: $primary-blue
+      font-size: 3rem
+      margin-top: .6rem
+      cursor: pointer
+
+  .unhidden
+    display: block
+    margin: auto
