--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -15,7 +15,7 @@ html
   margin: auto
 
 // variables
-$primary-grey: #888989
+$primary-grey: #58595b
 $primary-blue: #69e2d3
 $primary-orange: #eaa04b
 $primary-gold: #f3c953
@@ -51,15 +51,6 @@ h3
   font-family: $primary-font 
   text-align: center
   margin-bottom: 5rem
-
-.learn-more
-  font-family: $primary-font
-  font-size: 2rem
-  text-decoration: underline
-  color: #000
-
-  &:hover
-    color: #000
 
 %background-image
   background-size: cover
