--- a/assets/sass/_index-faq.sass
+++ b/assets/sass/_index-faq.sass
@@ -21,9 +21,6 @@
     padding-bottom: 1rem
     margin-bottom: 2rem
 
-    @media screen and (max-width: 500px)
-      margin-bottom: .5rem
-
     .symbol
       margin-right: auto
       font-size: 1.8vw
@@ -54,6 +51,8 @@
 
       @media screen and (max-width: 500px)
         font-size: 1.8rem
+        line-height: 3rem
+        text-align: left
 
     &-answer
       font-size: $secondary-size
