--- a/assets/sass/_index-process.sass
+++ b/assets/sass/_index-process.sass
@@ -1,3 +1,87 @@
+.process2
+  padding: 10rem
+  width: 90%
+  background-color: $primary-blue
+  text-align: center
+  margin: auto
+
+  @media screen and (max-width: 1180px)
+    padding: 5rem
+    width: 100%
+
+  &-column
+    // width: 49%
+    display: inline-block
+    vertical-align: top
+    color: $primary-white
+    text-align: left
+    font-family: $primary-font
+
+    @media screen and (max-width: 1180px)
+      display: block
+      margin: auto
+      width: 80vw!important
+
+    &-1
+      width: 50%
+
+    &-2
+      width: 40%
+
+  &-header
+    font-size: 7vw
+    font-weight: bold
+    line-height: 9vw
+
+    @media screen and (max-width: 1180px)
+      font-size: 8vw
+      // text-align: center
+      margin-bottom: 4rem
+
+    @media screen and (max-width: 500px)
+      font-size: 3.5rem
+      line-height: 4rem
+
+  &-title
+    font-size: 1.8vw
+    padding-bottom: 4rem
+    position: relative
+    font-weight: bold
+
+    @media screen and (max-width: 1180px)
+      width: 80%
+      margin: auto
+      font-size: 3.5vw
+
+    @media screen and (max-width: 500px)
+      padding-bottom: 2rem
+      font-size: 2rem
+
+    &:before
+      content: ""
+      position: absolute
+      left: 0
+      bottom: 0
+      height: .1rem
+      width: 50%
+      border-bottom: .4rem solid #fff
+
+      @media screen and (max-width: 500px)
+        border-bottom: .2rem solid #fff
+
+  &-steps
+    font-size: 1.2vw
+    margin-top: 3rem
+
+    @media screen and (max-width: 1180px)
+      font-size: 2.2vw
+      width: 80%
+      margin: 5rem auto
+    
+    @media screen and (max-width: 500px)
+      font-size: 1.8rem
+      margin: 2rem auto
+
 .process
 
   .row
