--- a/assets/sass/_index-testimonial.sass
+++ b/assets/sass/_index-testimonial.sass
@@ -4,9 +4,6 @@
   border-top: .1rem solid (0, 0, 0, 0.2)
   padding: 6rem 0 8rem
 
-  .row
-    padding: 0 0 0 7rem
-
   img.d-block
     width: 35rem!important
     margin: 3rem 0 0!important
@@ -54,6 +51,9 @@
   .carousel-control-next-icon
     width: 4rem!important
     height: 4rem!important
+
+    @media screen and (max-width: 500px)
+      width: 1rem!important
 
   .carousel-control-prev-icon
     background-image: url('../svg/prev_arrow.svg')!important
