--- a/assets/sass/_navbar.sass
+++ b/assets/sass/_navbar.sass
@@ -83,7 +83,9 @@
 
     @media screen and (max-width: 780px)
       display: none
-      padding-top: 1rem
+
+    @media screen and (max-width: 500px)
+      margin: 1.5rem auto 1rem
 
     ul
       width: 4rem
