--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -92,6 +92,11 @@ h3
     cursor: pointer
     margin: auto
     font-family: $primary-font
+
+    @media screen and (max-width: 500px)
+      width: 14rem
+      height: 3.2rem
+      font-size: 1.8rem
     
 
   .start-design span 
