--- a/assets/sass/_index-intro.sass
+++ b/assets/sass/_index-intro.sass
@@ -13,14 +13,15 @@
         height: 80vw
     
     @media screen and (max-width: 500px)
-        background-size: 160%
-        height: 100vw
+        background-size: 240%
+        height: 138vw
+        padding-bottom: 0
     
     @include clearfix
 
     &-info
         margin: auto
-        width: 100vw
+        width: 60vw
         padding-top: 4vw 
         padding-left: 1rem
         // @media screen and (max-width: 1440px)
@@ -35,9 +36,11 @@
 
         @media screen and (max-width: 780px)
             padding-top: 0
+            width: 90vw
 
         @media screen and (max-width: 500px)
             padding-top: 10vw
+            width: 100vw
 
         h2, p
             color: $primary-white
@@ -51,7 +54,7 @@
                 font-size: 8vw
 
             @media screen and (max-width: 500px)
-                font-size: 9vw
+                font-size: 12vw
         p
             font-size: 2vw
 
@@ -59,7 +62,7 @@
                 font-size: 2.8vw
 
             @media screen and (max-width: 500px)
-                font-size: 3.2vw
+                font-size: 5.5vw
 
 
         .design-button
